basic/traefik/external-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: external-middleware-redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "9000"
