basic/traefik/internal-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: internal-middleware-redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "9000"
