basic/traefik/middleware-redirect-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middleware-redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
