basic/traefik/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "9000"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ip-white-list
spec:
  ipWhiteList:
    sourceRange:
      - 127.0.0.1/32
      - 192.168.3.0/24
