basic/traefik/ingress-route-https-inner.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-https-inner
spec:
  entryPoints:
    - websecure
  tls:
    secretName: lvlv.fun-tls
    domains:
      - main: lvlv.fun
        sans:
          - "*.lvlv.fun"
  routes:
    - kind: Rule
      match: Host(`ql.lvlv.fun`)
      middlewares:
        - name: ip-white-list
      services:
        - kind: Service
          name: jd-qinglong
          passHostHeader: true
          port: 80
    - kind: Rule
      match: Host(`ddns.lvlv.fun`)
      middlewares:
        - name: ip-white-list
      services:
        - kind: Service
          name: ddns-go
          passHostHeader: true
          port: 80
    - kind: Rule
      match: Host(`jackett.lvlv.fun`)
      middlewares:
        - name: ip-white-list
      services:
        - kind: Service
          name: jackett
          passHostHeader: true
          port: 80
    - kind: Rule
      match: Host(`radarr.lvlv.fun`)
      middlewares:
        - name: ip-white-list
      services:
        - kind: Service
          name: radarr
          passHostHeader: true
          port: 80
    - kind: Rule
      match: Host(`sonarr.lvlv.fun`)
      middlewares:
        - name: ip-white-list
      services:
        - kind: Service
          name: sonarr
          passHostHeader: true
          port: 80
    - kind: Rule
      match: Host(`tmm.lvlv.fun`)
      middlewares:
        - name: ip-white-list
      services:
        - kind: Service
          name: tinymediamanager
          passHostHeader: true
          port: 80
    - kind: Rule
      match: Host(`meshcommander.lvlv.fun`)
      middlewares:
        - name: ip-white-list
      services:
        - kind: Service
          name: meshcommander
          passHostHeader: true
          port: 80
    - kind: Rule
      match: Host(`qb.lvlv.fun`)
      middlewares:
        - name: ip-white-list
      services:
        - kind: Service
          name: qbittorrent
          passHostHeader: true
          port: 80
    - kind: Rule
      match: Host(`pan.lvlv.fun`)
      middlewares:
        - name: ip-white-list
      services:
        - kind: Service
          name: pan-index
          passHostHeader: true
          port: 80
